tests/valid_programs/tuples_nested_assign.duck
use go "fmt";

fn main() {
    let x: ((String,),) = (("tuple",),);
    go {
        fmt.Println(x)
    }
    x.0 = ("replaced",);
    go {
        fmt.Println(x)
    }
}
