tests/errors/references/nested_const_struct_assign_imm_ref.duck
struct A {
    s: String,
} impl {
}

struct B {
    a: &A,
} impl {
}

fn main() {
    const b = B { a: &A { s: "text" } };
    b.a.s = "replaced";
}
